--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="img_header" src="img/main-pic.png" alt="Head picture"/>
             <nav id="main-nav">
               <a class="nav_button box1" href="/index.html/">главная</a>
-              <a class="nav_button box2" href="../about/index.html/">о нас</a>
+              <a class="nav_button box2" href="about/index.html/">о нас</a>
               <a class="nav_button box3" href="/rules.html/">занятия</a>
               <a class="nav_button box4" href="/gallery.html/">галерея</a>
               <a class="nav_button box5" href="/contacts.html/">контакты</a>
