--- a/lessons/index.html
+++ b/lessons/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Kindergarden project</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
@@ -17,12 +17,12 @@
                 <div class="page">
                     <img class="img_header" src="img/main-pic.png" alt="Head picture"/>
                     <nav id="main-nav">
-                        <a class="nav_button box1" href="/index.html/">главная</a>
-                        <a class="nav_button box2" href="/about.html/">о нас</a>
-                        <a class="nav_button box3" href="/rules.html/">занятия</a>
-                        <a class="nav_button box4" href="/gallery.html/">галерея</a>
-                        <a class="nav_button box5" href="/contacts.html/">контакты</a>
-                        <a class="nav_button box6" href="/partners.html/">партнеры</a>
+                        <a class="nav_button box1" href="/main">главная</a>
+                        <a class="nav_button box2" href="/about">о нас</a>
+                        <a class="nav_button box3" href="/lessons">занятия</a>
+                        <a class="nav_button box4" href="/gallery">галерея</a>
+                        <a class="nav_button box5" href="/contacts">контакты</a>
+                        <a class="nav_button box6" href="/partners">партнеры</a>
                     </nav>
                     <div class="content border-style3" id="background-colour3">
                         <div class="content_text" id="text-position">
