--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav id="main-nav">
               <a class="nav_button box1" href="/main">главная</a>
               <a class="nav_button box2" href="/about">о нас</a>
-              <a class="nav_button box3" href="/lessons">занятия</a>
+              <a class="nav_button box3" href="/rules">занятия</a>
               <a class="nav_button box4" href="/gallery">галерея</a>
               <a class="nav_button box5" href="/contacts">контакты</a>
               <a class="nav_button box6" href="/partners">партнеры</a>
