--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <div class="page">
             <img class="img_header" src="img/main-pic.png" alt="Head picture"/>
             <nav id="main-nav">
-              <a class="nav_button box1" href="/main">главная</a>
-              <a class="nav_button box2" href="/about">о нас</a>
-              <a class="nav_button box3" href="/rules">занятия</a>
-              <a class="nav_button box4" href="/gallery">галерея</a>
-              <a class="nav_button box5" href="/contacts">контакты</a>
-              <a class="nav_button box6" href="/partners">партнеры</a>
+              <a class="nav_button box1" href="main/index.html">главная</a>
+              <a class="nav_button box2" href="about/index.html">о нас</a>
+              <a class="nav_button box3" href="lessons/index.html">занятия</a>
+              <a class="nav_button box4" href="gallery/index.html">галерея</a>
+              <a class="nav_button box5" href="contacts/index.html">контакты</a>
+              <a class="nav_button box6" href="partners/index.html">партнеры</a>
             </nav>
             <div class="content border-style1 main_content">
               <div class="content_text">
