--- a/main/index.html
+++ b/main/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Kindergarden project</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -15,14 +15,14 @@
       <div class="blanket">
         <div class="wrapper"> 
           <div class="page">
-            <img class="img_header" src="img/main-pic.png" alt="Head picture"/>
+            <img class="img_header" src="../img/main-pic.png" alt="Head picture"/>
             <nav id="main-nav">
-              <a class="nav_button box1" href="/index.html/">главная</a>
-              <a class="nav_button box2" href="about/index.html/">о нас</a>
-              <a class="nav_button box3" href="/rules.html/">занятия</a>
-              <a class="nav_button box4" href="/gallery.html/">галерея</a>
-              <a class="nav_button box5" href="/contacts.html/">контакты</a>
-              <a class="nav_button box6" href="/partners.html/">партнеры</a>
+              <a class="nav_button box1" href="../main/index.html">главная</a>
+              <a class="nav_button box2" href="../about/index.html">о нас</a>
+              <a class="nav_button box3" href="../lessons/index.html">занятия</a>
+              <a class="nav_button box4" href="../gallery/index.html">галерея</a>
+              <a class="nav_button box5" href="../contacts/index.html">контакты</a>
+              <a class="nav_button box6" href="../partners/index.html">партнеры</a>
             </nav>
             <div class="content border-style1 main_content">
               <div class="content_text">
@@ -44,18 +44,18 @@
                     критериям.</p>
                 </div>
                 <div class="line"></div>
-                <img  class="content_image" src="img/125.jpg" alt="kid with colorful hands" />
-                <img  class="content_image" src="img/children-raising-hands.jpg" alt="kid with colorful hands" />
+                <img  class="content_image" src="../img/125.jpg" alt="kid with colorful hands" />
+                <img  class="content_image" src="../img/children-raising-hands.jpg" alt="kid with colorful hands" />
               </div>
             </div>
           </div>
         </div>
           <div class="tele_header">
-            <a href="https://api.whatsapp.com/send?phone=+79247304977&text=" target="_blank"><img class="w-icon i-size" src="img/whatsapp.png" alt="whatsapp" height="45px"></a>
-            <a href=""><img class="inst-you i-size" src="img/phone.png" alt="phone icon" height="45px" /></a>
-            <a href=""><img class="fa-icon i-size" src="img/facebook-i.png" alt="facebook-icon" height="45px"></a>
-            <a href="https://www.instagram.com/ostrovok_detstva/" target="_blank"><img class="inst-you i-size" src="img/insta.png" alt="insta-icon" height="45px"></a>
-            <a href=""><img class="inst-you i-size" src="img/youtub.png" alt="youtube-icon" height="45px"></a>
+            <a href="https://api.whatsapp.com/send?phone=+79247304977&text=" target="_blank"><img class="w-icon i-size" src="../img/whatsapp.png" alt="whatsapp" height="45px"></a>
+            <a href=""><img class="inst-you i-size" src="../img/phone.png" alt="phone icon" height="45px" /></a>
+            <a href=""><img class="fa-icon i-size" src="../img/facebook-i.png" alt="facebook-icon" height="45px"></a>
+            <a href="https://www.instagram.com/ostrovok_detstva/" target="_blank"><img class="inst-you i-size" src="../img/insta.png" alt="insta-icon" height="45px"></a>
+            <a href=""><img class="inst-you i-size" src="../img/youtub.png" alt="youtube-icon" height="45px"></a>
           </div>
       </div>
   </body>
