--- a/contacts/index.html
+++ b/contacts/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
          <title>Kindergarden project</title>
-        <script src="JS/script.js"></script>
+        <script src="../JS/script.js"></script>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
@@ -16,9 +16,9 @@
         <div class="blanket">
             <div class="wrapper" id="correction"> 
                 <div class="page" >
-                    <img class="img_header" src="img/main-pic.png" alt="Head picture"/>
+                    <img class="img_header" src="../img/main-pic.png" alt="Head picture"/>
                     <nav id="main-nav">
-                        <a class="nav_button box1" href="../index.html/">главная</a>
+                        <a class="nav_button box1" href="../main/index.html/">главная</a>
                         <a class="nav_button box2" href="../about/index.html">о нас</a>
                         <a class="nav_button box3" href="../lessons/index.html">занятия</a>
                         <a class="nav_button box4" href="../gallery/index.html">галерея</a>
