--- a/gallery/index.html
+++ b/gallery/index.html
@@ -26,6 +26,7 @@
                     </nav>
                     <div class="content border-style4" id="background-colour4">
                         <div class="main_content">
+                            <figure><img src="../img/giao-vien-mam-non-1.jpg" alt="lessons with teacher" /></figure>
                         </div>
                     </div>
                 </div>
