--- a/contacts/index.html
+++ b/contacts/index.html
@@ -18,7 +18,7 @@
                 <div class="page" >
                     <img class="img_header" src="../img/main-pic.png" alt="Head picture"/>
                     <nav id="main-nav">
-                        <a class="nav_button box1" href="../main/index.html/">главная</a>
+                        <a class="nav_button box1" href="../main/index.html">главная</a>
                         <a class="nav_button box2" href="../about/index.html">о нас</a>
                         <a class="nav_button box3" href="../lessons/index.html">занятия</a>
                         <a class="nav_button box4" href="../gallery/index.html">галерея</a>
