--- a/partners/index.html
+++ b/partners/index.html
@@ -26,7 +26,7 @@
                     </nav>
                     <div class="content border-style6">
                         <div class="main_content " id="link-area">
-                            <p>Наш партнер:</p><br>
+                            <p>Наш партнер - "Дальневосточная ассоциация системных семейных психологов":</p><br>
                             <a class="link-style" href="http://двассп.рф">http://двассп.рф</a>
                         </div>
                     </div>
