--- a/partners/index.html
+++ b/partners/index.html
@@ -33,11 +33,11 @@
                 </div>
             </div>
             <div class="tele_header">
-            <a href="https://api.whatsapp.com/send?phone=+79247304977&text=" target="_blank"><img class="w-icon" src="../img/whatsapp.png" alt="whatsapp" height="45px"></a>
-            <a href=""><img class="inst-you" src="../img/phone.png" alt="phone icon" height="45px" /></a>
-            <a href=""><img class="fa-icon" src="../img/facebook-i.png" alt="facebook-icon" height="45px"></a>
-            <a href="https://www.instagram.com/ostrovok_detstva/" target="_blank"><img class="inst-you" src="../img/insta.png" alt="insta-icon" height="45px"></a>
-            <a href=""><img class="inst-you" src="../img/youtub.png" alt="youtube-icon" height="45px"></a>
+            <a href="https://api.whatsapp.com/send?phone=+79247304977&text=" target="_blank"><img class="w-icon i-size" src="../img/whatsapp.png" alt="whatsapp" height="45px"></a>
+            <a href=""><img class="inst-you i-size" src="../img/phone.png" alt="phone icon" height="45px" /></a>
+            <a href=""><img class="fa-icon i-size" src="../img/facebook-i.png" alt="facebook-icon" height="45px"></a>
+            <a href="https://www.instagram.com/ostrovok_detstva/" target="_blank"><img class="inst-you i-size" src="../img/insta.png" alt="insta-icon" height="45px"></a>
+            <a href=""><img class="inst-you i-size" src="../img/youtub.png" alt="youtube-icon" height="45px"></a>
             </div>
         </div>
     </body>
