--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
                         <a class="nav_button box6" href="../partners/index.html">партнеры</a>
                     </nav>
                     <div class="content border-style2" id="back-colour">
-                        <div class="content_text">
+                        <div class="content_text" id="text-position">
                             <br>
                             <p>Частный Детский сад «Островок Детства» работает с 2010 года.</p><br><br>
                             <p class="greeting">Главная цель:</p><br>
