--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <img  class="content_image" src="img/125.jpg" alt="kid with colorful hands" />
                 <img  class="content_image" src="img/children-raising-hands.jpg" alt="kid with colorful hands" />
               </div>
+              <footer>
+                    <p class="footer">© 2018 Copyright Aleksandra Borisova</p>  
+              </footer>
             </div>
           </div>
         </div>
