--- a/gallery/index.html
+++ b/gallery/index.html
@@ -26,7 +26,14 @@
                     </nav>
                     <div class="content border-style4" id="background-colour4">
                         <div class="main_content">
-                            <figure class="gallery"><img src="../img/giao-vien-mam-non-1.jpg" alt="lessons with teacher" /></figure>
+                            <figure class="gallery">
+                               <img src="../img/kids1.jpg" alt="lessons with teacher" />
+                               <img src="../img/kids2.jpg" alt="lessons with teacher" />
+                               <img src="../img/kids3.jpg" alt="lessons with teacher" />  
+                               <img src="../img/kids4.jpg" alt="lessons with teacher" />
+                               <img src="../img/kids5.jpg" alt="lessons with teacher" />
+                               <img src="../img/kids6.png" alt="lessons with teacher" />
+                            </figure>
                         </div>
                     </div>
                 </div>
