--- a/about/index.html
+++ b/about/index.html
@@ -41,6 +41,12 @@
                             <p>Работаем мы круглогодично.
                             Режим работы с понедельника по пятницу с 7:30 до 19:00; в выходные дни с 8.30 до 19.00</p>
                             <p>У нас 3 группы. Наполняемость групп – до 15 человек.</p>
+                            <div class="line"></div>
+                                <img  class="content_image" src="../img/exterior.png" alt="kid with colorful hands" />
+                                <img  class="content_image" src="../img/interior.png" alt="kid with colorful hands" />
+                            <footer>
+                                <p class="footer">© 2018 Copyright Aleksandra Borisova</p>  
+                            </footer>
                         </div>
                     </div>
                 </div>
