--- a/gallery/index.html
+++ b/gallery/index.html
@@ -34,6 +34,10 @@
                                <img src="../img/kids5.jpg" alt="lessons with teacher" />
                                <img src="../img/kids6.png" alt="lessons with teacher" />
                             </figure>
+                            <div class="line"></div>
+                            <footer>
+                                <p class="footer">© 2018 Copyright Aleksandra Borisova</p>  
+                            </footer>
                         </div>
                     </div>
                 </div>
