--- a/main/index.html
+++ b/main/index.html
@@ -44,8 +44,8 @@
                     критериям.</p>
                 </div>
                 <div class="line"></div>
-                <img  class="content_image" src="../img/125.jpg" alt="kid with colorful hands" />
-                <img  class="content_image" src="../img/children-raising-hands.jpg" alt="kid with colorful hands" />
+                <img  class="content_image" src="../img/125.png" alt="kid with colorful hands" />
+                <img  class="content_image" src="../img/children-raising-hands.png" alt="kid with colorful hands" />
               </div>
             </div>
           </div>
