--- a/main/index.html
+++ b/main/index.html
@@ -44,8 +44,11 @@
                     критериям.</p>
                 </div>
                 <div class="line"></div>
-                <img  class="content_image" src="../img/125.png" alt="kid with colorful hands" />
-                <img  class="content_image" src="../img/children-raising-hands.png" alt="kid with colorful hands" />
+                     <img  class="content_image" src="../img/125.png" alt="kid with colorful hands" />
+                     <img  class="content_image" src="../img/children-raising-hands.png" alt="kid with colorful hands" />
+                <footer>
+                     <p class="footer">© 2018 Copyright Aleksandra Borisova</p>  
+                </footer>
               </div>
             </div>
           </div>
