--- a/contacts/index.html
+++ b/contacts/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-         <title>Kindergarden project</title>
+        <title>Частный детский сад Островок детства во Владивостоке</title>
         <script src="../JS/script.js"></script>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/reset.css">
