added more lessons

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -37,7 +37,9 @@
                                         <li>Физкультурa</li>
                                         <li>Окружающий мир</li>  
                                         <li>Аппликация </li>
-                                        <li>Творческая мастерская</li> <li>Музыка</li>
+                                        <li>Творческая мастерская</li> 
+                                        <li>Музыкалтьные занятия</li>
+                                         <li>Хореография</li>
                                     </ul>
                                 </div>
                             </div>
