--- a/lessons/index.html
+++ b/lessons/index.html
@@ -38,7 +38,7 @@
                                         <li>Окружающий мир</li>  
                                         <li>Аппликация </li>
                                         <li>Творческая мастерская</li> 
-                                        <li>Музыкалтьные занятия</li>
+                                        <li>Музыкальные занятия</li>
                                          <li>Хореография</li>
                                     </ul>
                                 </div>
