--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,10 @@
             <div class="wrapper"> 
                 <div class="page">
                     <img class="img_header" src="../img/main-pic.png" alt="Head picture"/>
+                    <div class="top_line">
+                        <p class="faq">г. Владивосток</p>
+                        <a class="faq" href="#">FAQ</a>
+                   </div>
                     <nav id="main-nav">
                         <a class="nav_button box1" href="../main/index.html">главная</a>
                         <a class="nav_button box2" href="../about/index.html">о нас</a>
@@ -45,7 +49,7 @@
                                 <img  class="content_image" src="../img/exterior.png" alt="kid with colorful hands" />
                                 <img  class="content_image" src="../img/interior.png" alt="kid with colorful hands" />
                             <footer>
-                                <p class="footer">© 2018 Copyright Aleksandra Borisova</p>  
+                                <p class="footer">© 2018 «Островок Детства»</p>  
                             </footer>
                         </div>
                     </div>
