--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Частный детский сад Островок детства во Владивостоке</title>
+        <meta name="Description" content="Почему лучше выбирать частные детский сад Островок детства, описание. " />
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
