--- a/main/index.html
+++ b/main/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Частный детский сад Островок детства во Владивостоке</title>
+        <meta name="Description" content="Почему лучше выбирать частные детский сад Островок детства, описание. " />
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
@@ -16,6 +17,10 @@
         <div class="wrapper"> 
           <div class="page">
             <img class="img_header" src="../img/main-pic.png" alt="Head picture"/>
+            <div class="top_line">
+                <p class="faq">г. Владивосток</p>
+                <a class="faq" href="#">FAQ</a>
+            </div>
             <nav id="main-nav">
               <a class="nav_button box1" href="../main/index.html">главная</a>
               <a class="nav_button box2" href="../about/index.html">о нас</a>
@@ -47,7 +52,7 @@
                      <img  class="content_image" src="../img/125.png" alt="kid with colorful hands" />
                      <img  class="content_image" src="../img/children-raising-hands.png" alt="kid with colorful hands" />
                 <footer>
-                     <p class="footer">© 2018 Copyright Aleksandra Borisova</p>  
+                     <p class="footer">© 2018 «Островок Детства»</p>  
                 </footer>
               </div>
             </div>
