--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
     <head>
-        <title>Частный детский сад Островок детства во Владивостоке</title>
-        <meta name="Description" content="Почему лучше выбирать частные детский сад Островок детства, описание. " />
+        <title>Частный детский сад Островок детства во Владивостоке. Ostrovok detstva kindergarten.</title>
+        <meta name="Description" content="Почему лучше выбирать частный детский сад Островок детства, описание. Детское развитие во Владивостоке " />
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
