--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     критериям.</p>
                 </div>
                 <div class="line"></div>
-                <img  class="content_image" src="img/125.png" alt="kid with colorful hands" />
-                <img  class="content_image" src="img/children-raising-hands.png" alt="kid with colorful hands" />
+                <img  class="content_image" src="img/det1.jpg" alt="детский сад Островок детства" />
+                <img  class="content_image" src="img/det2.jpg" alt="детский сад Островок детства" />
                 <footer>
                     <p class="footer">© 2018 «Островок Детства»</p>  
               </footer>
