--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Частный детский сад Островок детства во Владивостоке. Ostrovok detstva kindergarten.</title>
-        <meta name="Description" content="Почему лучше выбирать частный детский сад Островок детства, описание. Детское развитие во Владивостоке " />
+        <meta name="Description" content="Почему лучше выбрать частный детский сад Островок детства, описание, контакты. Детское развитие во Владивостоке " />
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
