--- a/lessons/index.html
+++ b/lessons/index.html
@@ -68,7 +68,7 @@
                         <a href="../contacts/index.html"><img class="inst-you i-size" src="../img/phone.png" alt="phone icon" height="45px" /></a>
                         <a href=""><img class="fa-icon i-size" src="../img/facebook-i.png" alt="facebook-icon" height="45px"></a>
                         <a href="https://www.instagram.com/ostrovok_detstva/" target="_blank"><img class="inst-you i-size" src="../img/insta.png" alt="insta-icon" height="45px"></a>
-                        <a href=""><img class="inst-you i-size" src="../img/youtub.png" alt="youtube-icon" height="45px"></a>
+                        <!--<a href=""><img class="inst-you i-size" src="../img/youtub.png" alt="youtube-icon" height="45px"></a>-->
                     </div>
         </div>
     </body>
