--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
                 <a href="https://api.whatsapp.com/send?phone=+79247304977&text=" target="_blank"><img class="w-icon i-size" src="../img/whatsapp.png" alt="whatsapp" height="45px"></a>
                 <a href="../contacts/index.html"><img class="inst-you i-size" src="../img/phone.png" alt="phone icon" height="45px" /></a>
                 <a href=""><img class="fa-icon i-size" src="../img/facebook-i.png" alt="facebook-icon" height="45px"></a>
-                <a href="https://www.instagram.com/ostrovok_detstva/" target="_blank"><img class="inst-you i-size" src="../img/insta.png" alt="insta-icon" height="45px"></a>
+                <a href="https://instagram.com/ostrovok_detstva_vl?igshid=1fgecwi3qb1h3" target="_blank"><img class="inst-you i-size" src="../img/insta.png" alt="insta-icon" height="45px"></a>
             </div>    
     </body>
 </html>
