--- a/about/index.html
+++ b/about/index.html
@@ -39,11 +39,11 @@
                             <br>
                             <p>В своей работе мы используем методические рекомендации из «Программы обучения и воспитания» под редакцией Васильевой М. А., а также некоторые разделы из Программ «Детство», математику Е.В.Колесниковой,«Окружающий мир» М.А. Жуковой.</p>
 
-                            <p>Кроме того, к нам приходят педагоги и занимаются с детками Английский языком; развитием речи (занятия с логопедом); музыкой; подготовкой к школе.</p>
+                            <p>Кроме того, к нам приходят педагоги и занимаются с детками Английский языком; развитием речи (занятия с логопедом); музыкой; подготовкой к школе, шахматами.</p>
 
                             <p>Принимаются дети в возрасте от 1,5 лет до 6 лет .</p>
                             <p>Работаем мы круглогодично.
-                            Режим работы с понедельника по пятницу с 7:30 до 19:00; в выходные дни с 8.30 до 19.00</p>
+                            Режим работы с понедельника по пятницу с 7:30 до 19:30</p>
                             <p>У нас 3 группы. Наполняемость групп – до 15 человек.</p>
                             <div class="line"></div>
                                 <img  class="content_image" src="../img/exterior.png" alt="kid with colorful hands" />
