--- a/lessons/index.html
+++ b/lessons/index.html
@@ -44,7 +44,6 @@
                                         <li>Аппликация </li>
                                         <li>Творческая мастерская</li> 
                                         <li>Музыкальные занятия</li>
-                                         <li>Хореография</li>
                                     </ul>
                                 </div>
                             </div>
@@ -56,6 +55,9 @@
                                         <li>Английский язык</li>  
                                         <li>Занятия с логопедом </li>
                                         <li>Подготовка к школе</li>  
+                                        <li>Шахматы</li> 
+                                        <li>Выпечка</li>
+                                        <li>Кукольный театр</li> 
                                     </ul>
                                 </div>
                             </div>
