--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
 
                             <p>Принимаются дети в возрасте от 1,5 лет до 6 лет .</p>
                             <p>Работаем мы круглогодично.
-                            Режим работы с понедельника по пятницу с 7:30 до 19:30</p>
+                            Режим работы с понедельника по пятницу с 7:30 до 19:30.</p>
                             <p>У нас 3 группы. Наполняемость групп – до 15 человек.</p>
                             <div class="line"></div>
                                 <img  class="content_image" src="../img/exterior.png" alt="kid with colorful hands" />
