--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,7 @@
                 <div class="left_col">
                     <p class="greeting">Приветствуем вас, наши посетители!</p>
 
-                    <p>Частный детский сад «Островок Детства» – это сплоченная команда, которая работает вместе уже 8 лет. Воспитатели и педагоги детского сада «Островок Детства»- это люди, которые вторыми после родителей стараются дать детям самое лучшее.</p>
+                    <p>Частный детский сад «Островок Детства» – это сплоченная команда, которая работает вместе уже более 12 лет. Воспитатели и педагоги детского сада «Островок Детства»- это люди, которые вторыми после родителей стараются дать детям самое лучшее.</p>
 
                     <p>Каждый из нас находится в постоянном поиске. Родители каждый день ищут 
                     для своего ребенка все самое лучшее, желая обеспечить его всеми благами, а 
