--- a/about/index.html
+++ b/about/index.html
@@ -44,8 +44,14 @@
                             <br>
                             <p>Главное, для чего работаем мы, это:</p>
                             <br>
+                            <div class="ul-prop">
+                                    <ul>
+                                        <li>Bсестороннее развитие личности и индивидуальный подход к каждому ребенку.</li>  
+                                        <li>Адаптация ребёнка в детском саду.</li>
+                                        <li>Подготовка детей к школе</li>  
+                                    </ul>
+                                </div>
                             
-
                             <div class="line"></div>
                                 <img  class="content_image" src="../img/exterior.png" alt="kid with colorful hands" />             
                             <footer>
